balance: better formatting and bugfix
bugfix: on the mobile ui if the balance was too long, you could scroll horizontally
  at balance separate digits in a group of 3 in the mobile version
  make the decimals smaller on the mobile version
  add copy button (before that i was trying to make the selecting all work on three clicks, did not work out so I added a button)

--- a/src/layouts/InterfaceLayout/components/InterfaceBalance/InterfaceBalance.scss
+++ b/src/layouts/InterfaceLayout/components/InterfaceBalance/InterfaceBalance.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.hidden-input {
+  opacity: 0;
+  position: absolute;
+  z-index: 1;
+  pointer-events: none;
+}
+
 .balance {
   background-color: $transaction-block-balance;
 
